# raven-cloud

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
dashboard/: .env.production  index.html  package.json  proxyOptions.ts  vite.config.ts
dashboard/src/: App.tsx  routes.tsx
dashboard/src/components/common/: ErrorBanner.tsx
dashboard/src/components/layout/: ProtectedRoute.tsx  RootLayout.tsx
dashboard/src/pages/: ApiKeys.tsx  Home.tsx  Marketplace.tsx  NotFound.tsx
dashboard/src/pages/auth/: Login.tsx
dashboard/src/providers/: UserProvider.tsx
dashboard/src/types/RavenCloud/: RavenMarketplace.ts
dashboard/src/utils/: roles.ts
raven_cloud/: hooks.py  modules.txt  patches.txt
raven_cloud/api/: notification.py  permission.py  test_notification.py  typesense.py
raven_cloud/fixtures/: role.json
raven_cloud/patches/v1_0/: add_unique_constraint_rc_site_user_token.py  backfill_weekly_summaries.py  cleanup_old_notification_logs.py
raven_cloud/public/dashboard/: index.html
raven_cloud/public/dashboard/assets/: index-4zJbact0.js  index-C0gr_Rj5.css  index-CSiE4hBQ.css  index-GQjAogVN.js
raven_cloud/raven_cloud/doctype/marketplace_download_logs/: marketplace_download_logs.js  marketplace_download_logs.json  marketplace_download_logs.py  test_marketplace_download_logs.py
raven_cloud/raven_cloud/doctype/raven_marketplace/: raven_marketplace.js  raven_marketplace.json  raven_marketplace.py  test_raven_marketplace.py
raven_cloud/utils/: fcm.py  notification.py  rc_caching.py
raven_cloud/www/: index.html
(+57 files in other folders)
